--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -17,7 +17,7 @@
   ~
   -->
 <resources>
-  <string name="activateForMorePrefs">Activer pour plus Préférences&#8230;</string>
+  <string name="activateForMorePrefs">Activer pour plus Préférences</string>
   <string name="adhanVolume">Volume Adhan</string>
   <string name="adjAngle">basé sur angle (angle / 60e de la nuit)</string>
   <string name="adjMidnight">Minuit</string>
@@ -47,20 +47,6 @@
   <string name="dateFormat1">31 Décembre 2013</string>
   <string name="dateFormat2">31 Décembre 13</string>
   <string name="dateFormat">Format de date</string>
-  <string name="dayFr">Vendredi</string>
-  <string name="dayMo">Lundi</string>
-  <string name="daySa">Samedi</string>
-  <string name="dayShortFr">Ven.</string>
-  <string name="dayShortMo">Lun.</string>
-  <string name="dayShortSa">Sam.</string>
-  <string name="dayShortSu">Dim.</string>
-  <string name="dayShortTh">Jeu.</string>
-  <string name="dayShortTu">Mar.</string>
-  <string name="dayShortWe">Mer.</string>
-  <string name="daySu">Dimanche</string>
-  <string name="dayTh">Jeudi</string>
-  <string name="dayTu">Mardi</string>
-  <string name="dayWe">Mercredi</string>
   <string name="delConfirmDhikr">Voulez - vous vraiment supprimer le dhikre \" %1$s\"?</string>
   <string name="delConfirm">Voulez - vous vraiment supprimer la ville %1$s ?</string>
   <string name="delete">Effacer</string>
@@ -145,7 +131,7 @@
   <string name="names">Les 99 noms d\'Allah</string>
   <string name="newAddCity">Ajouter nouvelle ville</string>
   <string name="newDhikr">Nouveau Dhikr</string>
-  <string name="noConnection">Pas de connection internet &#8230;</string>
+  <string name="noConnection">Pas de connexion</string>
   <string name="noFavs">Aucun favori</string>
   <string name="no">Non</string>
   <string name="notification">Notification</string>
@@ -161,14 +147,14 @@
   <string name="permissionCameraTitle">Autorisation d\'accès à l\'appareil photo</string>
   <string name="permissionLocationText">L\'autorisation de localisation est nécessaire, pour trouver votre ville. Si vous n\'autoriser pas cette appli pour accéder à votre emplacement, vous devez rechercher votre ville manuellement.</string>
   <string name="permissionLocationTitle">Autorisation d\'accès pour votre localisation</string>
-  <string name="permissionStorageText">L\'autorisation d\'accès au stockage est nécessaire ... Sans cette autorisation certaines fonctions ne seront pas active</string>
+  <string name="permissionStorageText">L\'autorisation d\'accès au stockage est nécessaire. Sans cette autorisation certaines fonctions ne seront pas active.</string>
   <string name="permissionStorageTitle">Autorisation d\'accès au stockage</string>
   <string name="prayerNotification">notification pour le temps de la prière</string>
   <string name="refresh">Synchroniser</string>
   <string name="resetConfirmDhikr">Voulez - vous vraiment réinitialiser le Dhikr \"%1$s\"?</string>
   <string name="restore">Restaurer</string>
   <string name="search">Chercher</string>
-  <string name="selectOther">autre choix</string>
+  <string name="selectOther">Autres…</string>
   <string name="mail">Email</string>
   <string name="sendMail">Envoyer email</string>
   <string name="settings">Paramètres</string>
@@ -196,7 +182,7 @@
   <string name="useSilenter">Silencieux</string>
   <string name="useVibration">Vibreure</string>
   <string name="version">Version</string>
-  <string name="vibrationDesc">Miliseconds - attendre vibrer attendre&#8230;</string>
+  <string name="vibrationDesc">Miliseconds - attendre vibrer attendre…</string>
   <string name="vibrationPattern">Modèle de vibration</string>
   <string name="volumeAlarm">Alarme-Volume</string>
   <string name="volumeMedia">Volume multimédia</string>
@@ -234,7 +220,6 @@
   <string name="report_bug_sum">Signaler un bug ou proposer de nouvelles fonctionnalités.</string>
   <string name="translate">Traduction</string>
   <string name="translate_sum">Aidez-nous à traduire cette aplication dans d’autres langues</string>
-  <string name="github">GitHub</string>
   <string name="github_sum">Suggérer des modifications ou signaler des bugs.</string>
   <string name="license">Licence</string>
   <string name="license_sum">Verifier Apache License, Version 2.0 license terms used on Prayer times</string>
@@ -244,14 +229,12 @@
   <string name="rate_desc">Laissez-nous un avis positif si vous aimez les temps de prière.</string>
   <string name="sendMail_sum">Envoyez-moi un E-Mail!</string>
   <string name="beta_tester_desc">S’inscrire comme Beta testeur en cliquant ici</string>
-  <string name="title_activity_maps">Carte</string>
   <string name="no_internet">Aucune connexion Internet</string>
   <string name="export">Exporter</string>
   <string name="versionNotSupported">Votre Version d’Android ne supporte pas cela!</string>
   <string name="from">De</string>
   <string name="to">À</string>
   <string name="permissionNotGranted">Autorisation non accordée.</string>
-  <string name="useOSMGeocoder">Utiliser OpenStreetMaps pour le géocodage</string>
   <string name="addFromCSV">Ajouter depuis un CSV</string>
   <string name="csvFromFile">Charger du CSV depuis un fichier</string>
   <string name="csvFromURL">Charger du CSV depuis une URL</string>
@@ -262,7 +245,9 @@
   <string name="ratingNegativeTitle">Écrivez vos commentaires !</string>
   <string name="ratingNegativeText">Ecris-moi un E-Mail avec vos sentiments, vos impressions et des suggestions pour cette application et aidez-moi à l’améliorer en permanence !</string>
   <string name="notnow">Pas maintenant</string>
+  <string name="totheplaystore">Télécharger moi au Play Store</string>
   <string name="widget_current_vakit">Widget - Indicateur horaire alternatif</string>
+  <string name="support_development">Soutenir le développement</string>
   <string name="widget">Widget</string>
   <string name="showLegacyWidgetsSummary">N’utiliser que si vous avez des problèmes avec vos Widgets</string>
   <string name="pleaseDeleteAndReadd">S’il vous plaît supprimer cette ville et ajouter la de nouveau.</string>
